--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,18 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
+  adapter: postgresql
+  pool: 5
+  username: hoge
+  password: hoge
+  host: localhost
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
+  database: blog_app_dev
+  test:
   <<: *default
-  database: db/test.sqlite3
+  database: blog_app_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: blog_app_pro
